Добавляет завершение аренды
